# napari-spero

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_spero/: _reader - Copy.py  _reader.py  napari.yaml
src/napari_spero/_tests/: test_reader.py
