[metadata]
name = napari-spero
version = 0.0.1
description = A reader for hyperspectal images collected with Spero QCL microscope by DRS Daylight
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/richtefee/napari-spero
author = Felix Richter
author_email = felix.richter@epfl.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    # Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/richtefee/napari-spero/issues
    Documentation = https://github.com/richtefee/napari-spero#README.md
    Source Code = https://github.com/richtefee/napari-spero
    User Support = https://github.com/richtefee/napari-spero/issues

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-spero = napari_spero:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
